--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="http://yw-mnd.com/plugin/openGN5/img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <!-- jquery cdn -->
-    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+   
     <!-- 폰트어썸 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- 부트스트랩 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+     <!-- jquery cdn -->
+     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/import.css">
     <link rel="stylesheet" href="css/swiper.min.css">
@@ -120,7 +121,7 @@
                     <div class="P_mom">
                         <a href="#"><img src="images/moms_meat.png" alt="Product banner1"></a>
                         <div class="P_btn">
-                            <div>
+                            <div class="cursor_pointer">
                                 <p>view</p>
                                 <i class="fas fa-plus"></i>
                             </div>
@@ -131,7 +132,7 @@
                     <div class="P_recover">
                         <a href="#"><img src="images/DR_mari.png" alt="Product banner2"></a>
                         <div class="P_btn">
-                            <div>
+                            <div class="cursor_pointer">
                                 <p>view</p>
                                 <i class="fas fa-plus"></i>
                             </div>
@@ -141,7 +142,7 @@
                     <div class="P_dr">
                         <a href="#"><img src="images/recoverbanner.png" alt="Product banner3"></a>
                         <div class="P_btn">
-                            <div>
+                            <div class="cursor_pointer">
                                 <p>view</p>
                                 <i class="fas fa-plus"></i>
                             </div>
@@ -175,7 +176,7 @@
                                <p>Notice</p>
                                <p>(주)예원 M&amp;D 공지사항을</p>
                                <p>알려드립니다.</p>
-                               <div class="go_btn"><p>바로가기</p></div>
+                               <div class="go_btn cursor_pointer"><p>바로가기</p></div>
                             </li>
 
                             <!-- <li><img src="images/notice.png" alt="notice_icon"></li> -->
@@ -185,7 +186,7 @@
                                 <p>Contact us</p>
                                 <p>(주)예원 M&amp;D에 문의사항을 남겨주시면</p>
                                 <p>메일로 답변드립니다.</p>
-                                <div class="go_btn"><p>바로가기</p></div>
+                                <div class="go_btn cursor_pointer"><p>바로가기</p></div>
                              </li>
 
                              <!-- <li><img src="images/mail.png" alt="mail_icon"></li> -->
@@ -195,7 +196,7 @@
                                 <p>Location</p>
                                 <p>(주)예원 M&amp;D의 오시는길을</p>
                                 <p>안내해드립니다.</p>
-                                <div class="go_btn"><p>바로가기</p></div>
+                                <div class="go_btn cursor_pointer"><p>바로가기</p></div>
                              </li>      
 
                              <!-- <li><img src="images/map.png" alt="map_icon"></li> -->
