--- a/content/businessArea.html
+++ b/content/businessArea.html
@@ -52,11 +52,11 @@
                         </label>
 
                         <ul class="nav_menu">
-                            <li><a href="content.html">회사소개</a></li>
-                            <li><a href="businessArea.html">사업분야</a></li>
-                            <li><a href="recovershop.html">리커버샵</a></li>
-                            <li><a href="moms.html">맘스육포</a></li>
-                            <li><a href="map.html">오시는 길</a></li>
+                            <li><a href="../content/content.html">회사소개</a></li>
+                            <li><a href="../content/businessArea.html">사업분야</a></li>
+                            <li><a href="../content/recovershop.html">리커버샵</a></li>
+                            <li><a href="../content/moms.html">맘스육포</a></li>
+                            <li><a href="../content/map.html">오시는 길</a></li>
                         </ul>
                         <label class="BG" for="menu-btn"></label>
                     </div>
@@ -68,23 +68,11 @@
 
         <div class="content dw_1200px">
             <div class="c_top">
-                <h2>회사소개</h2>
-            </div>
-
-            <!--회사소개 페이지와 맘스육포에만 메뉴가 들어갑니다. 다른페이지에서는 제거해주세요.-->
-            
-            <div class="c_menu">
-                <ul>
-                    <li><a href="../content/content.html">인사말</a></li>
-                    <li><a href="../content/synopsis.html">회사개요</a></li>
-                    <li><a href="../content/organize.html">조직도</a></li>
-                    <li><a href="../content/contribute.html">사회공헌/아우름</a></li>
-                    <li><a href="../content/company_LOGO.html">LOGO</a></li>
-                </ul>
+                <h2>사업분야</h2>
             </div>
 
             <div class="c_middle">
-                <a href="#"><img src="../images/company_a.jpg" alt="company image"></a>
+                <a href="#"><img src="../images/businessArea.jpg" alt="businessArea image"></a>
             </div>
         </div>
 
