--- a/content/company_LOGO.html
+++ b/content/company_LOGO.html
@@ -84,7 +84,7 @@
             </div>
 
             <div class="c_middle">
-                <a href="#"><img src="../images/company_a.jpg" alt="company image"></a>
+                <a href="#"><img src="../images/LOGO.jpg" alt="company LOGO image"></a>
             </div>
         </div>
 
