--- a/content/contribute.html
+++ b/content/contribute.html
@@ -84,7 +84,7 @@
             </div>
 
             <div class="c_middle">
-                <a href="#"><img src="../images/company_a.jpg" alt="company image"></a>
+                <a href="#"><img src="../images/contribute.jpg" alt="company contribute image"></a>
             </div>
         </div>
 
