--- a/content/moms_process.html
+++ b/content/moms_process.html
@@ -68,23 +68,20 @@
 
         <div class="content dw_1200px">
             <div class="c_top">
-                <h2>회사소개</h2>
+                <h2>맘스육포</h2>
             </div>
-
-            <!--회사소개 페이지와 맘스육포에만 메뉴가 들어갑니다. 다른페이지에서는 제거해주세요.-->
             
-            <div class="c_menu">
+            <div class="moms_menu">
                 <ul>
-                    <li><a href="../content/content.html">인사말</a></li>
-                    <li><a href="../content/synopsis.html">회사개요</a></li>
-                    <li><a href="../content/organize.html">조직도</a></li>
-                    <li><a href="../content/contribute.html">사회공헌/아우름</a></li>
-                    <li><a href="../content/company_LOGO.html">LOGO</a></li>
+                    <li><a href="moms.html">맘스수제육포 소개</a></li>
+                    <li><a href="moms_process.html">맘스수제육포 공정</a></li>
+                    <li><a href="moms_composition.html">맘스수제육포 구성</a></li>
                 </ul>
             </div>
 
+
             <div class="c_middle">
-                <a href="#"><img src="../images/company_a.jpg" alt="company image"></a>
+                <a href="#"><img src="../images/moms_process.jpg" alt="moms_process image"></a>
             </div>
         </div>
 
