--- a/content/synopsis.html
+++ b/content/synopsis.html
@@ -70,21 +70,19 @@
             <div class="c_top">
                 <h2>회사소개</h2>
             </div>
-
-            <!--회사소개 페이지와 맘스육포에만 메뉴가 들어갑니다. 다른페이지에서는 제거해주세요.-->
             
             <div class="c_menu">
                 <ul>
-                    <li><a href="../content/content.html">인사말</a></li>
-                    <li><a href="../content/synopsis.html">회사개요</a></li>
-                    <li><a href="../content/organize.html">조직도</a></li>
-                    <li><a href="../content/contribute.html">사회공헌/아우름</a></li>
-                    <li><a href="../content/company_LOGO.html">LOGO</a></li>
+                    <li><a href="content.html">인사말</a></li>
+                    <li><a href="synopsis.html">회사개요</a></li>
+                    <li><a href="organize.html">조직도</a></li>
+                    <li><a href="contribute.html">사회공헌/아우름</a></li>
+                    <li><a href="company_LOGO.html">LOGO</a></li>
                 </ul>
             </div>
 
             <div class="c_middle">
-                <a href="#"><img src="../images/company_a.jpg" alt="company image"></a>
+                <a href="#"><img src="../images/synopsis.jpg" alt="company synopsis image"></a>
             </div>
         </div>
 
