--- a/content/organize.html
+++ b/content/organize.html
@@ -84,7 +84,7 @@
             </div>
 
             <div class="c_middle">
-                <a href="#"><img src="../images/company_a.jpg" alt="company image"></a>
+                <a href="#"><img src="../images/organize.jpg" alt="company organize image"></a>
             </div>
         </div>
 
