--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="wrap">
         <div class="h_wrap">
             <header>
-                <h1><a href="#"><img src="../yw_template/images/logo_img.png" alt="yw_template logo"></a></h1>
+                <h1><a href="index.html"><img src="../yw_template/images/logo_img.png" alt="yw_template logo"></a></h1>
                 <nav>
                     <div class="menubar">
                         <input class="menu-btn" type="checkbox" id="menu-btn">
@@ -52,11 +52,11 @@
                         </label>
 
                         <ul class="nav_menu">
-                            <li><a href="#">회사소개</a></li>
-                            <li><a href="#">사업분야</a></li>
-                            <li><a href="#">리커버샵</a></li>
-                            <li><a href="#">맘스육포</a></li>
-                            <li><a href="#">오시는 길</a></li>
+                            <li><a href="content/content.html">회사소개</a></li>
+                            <li><a href="content/content.html">사업분야</a></li>
+                            <li><a href="content/recovershop.html">리커버샵</a></li>
+                            <li><a href="content/moms.html">맘스육포</a></li>
+                            <li><a href="content/map.html">오시는 길</a></li>
                         </ul>
                         <label class="BG" for="menu-btn"></label>
                     </div>
@@ -177,7 +177,7 @@
                                <p>Notice</p>
                                <p>(주)예원 M&amp;D 공지사항을</p>
                                <p>알려드립니다.</p>
-                               <div class="go_btn cursor_pointer"><p>바로가기</p></div>
+                               <div class="go_btn cursor_pointer"><a href="./board/notice.html"><p>바로가기</p></a></div>
                             </li>
 
                             <li>
@@ -193,7 +193,7 @@
                                 <p>Location</p>
                                 <p>(주)예원 M&amp;D의 오시는길을</p>
                                 <p>안내해드립니다.</p>
-                                <div class="go_btn cursor_pointer"><p>바로가기</p></div>
+                                <div class="go_btn cursor_pointer"><a href="content/map.html"><p>바로가기</p></a></div>
                              </li>      
                         </ul>
                     </div>
@@ -207,9 +207,9 @@
             <div class="ft_wrap">
                 <div class="f_top">
                     <ul>
-                        <li class="col-xs-4">회사소개</li>
-                        <li class="col-xs-4">서비스이용약관</li>
-                        <li class="col-xs-4">개인정보처리방침</li>
+                        <li class="col-xs-4"><a href="content/content.html">회사소개</a></li>
+                        <li class="col-xs-4"><a href="">서비스이용약관</a></li>
+                        <li class="col-xs-4"><a href="">개인정보처리방침</a></li>
                     </ul>
                 </div>
 
