--- a/board/notice_view.html
+++ b/board/notice_view.html
@@ -72,20 +72,23 @@
             </div>
 
             <div class="cmt_top">
-                <h2>(주)예원 M&amp;D 홈페이지 오픈 안내</h2>
-                <ul>
-                    <li>최고관리자</li>
-                    <li></li>
-                </ul>
+                <h2><strong>(주)예원 M&amp;D 홈페이지 오픈 안내</strong></h2>
                 
-
+                <div class="cmt_middle">
+                    <div><strong>최고관리자</strong></div>
+                    <div><i class="far fa-clock"></i>19-04-09 14:30</div>
+                </div>
             </div>
 
+            <div class="cmt_bottom">
+                <p>제조&amp;유통 (주)예원 M&amp;D에서 더 나은 서비스를 위해 홈페이지를 신규 오픈하였습니다.</p>
+                <p>앞으로도 (주)예원 M&amp;D에 많은 관심 부탁드리며 더욱 발전하는 기업이 되도록 노력하겠습니다.</p>
+            </div>
 
-
+            <div class="cmt_btn">
+                <a href="notice.html"><i class="fa fa-list"></i>목록</a>
+            </div>
         </div>
-
-
 
         <footer>
             <div class="ft_wrap">
