--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <!-- js -->
     <script src="js/swiper.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
 
 </head>
 
@@ -57,38 +58,45 @@
             </div>
         </div> 
         <!-- } modal -->
+
         <!--nav bar-->
         <div class="h_wrap">
-            <div class="header dw_1200px">
+            <div class="header">
                 <h1><a href="index.html"><img src="../yw_template/images/logo_img.png" alt="yw_template logo"></a></h1>
                 <div class="menubar">
-                    <ul class="nav_menu">
-                        <li><a href="content/content.html">회사소개</a></li>
-                        <li><a href="content/content.html">사업분야</a></li>
-                        <li><a href="content/recovershop.html">리커버샵</a></li>
-                        <li><a href="content/moms.html">맘스육포</a></li>
-                        <li><a href="content/map.html">오시는 길</a></li>
-                    </ul>
+                    <div class="nav_menu ">
+                        <a href="content/content.html">회사소개</a>
+                        <a href="content/content.html">사업분야</a>
+                        <a href="content/recovershop.html">리커버샵</a>
+                        <a href="content/moms.html">맘스육포</a>
+                        <a href="content/map.html">오시는 길</a>
+                    </div>
                     <a class="menu_icon" href="#"><i class="fa fa-bars"></i></a>
                 </div>
 
                 <style>
-                    .h_wrap .header { height: 90px; min-width: 70px; }
+                    .h_wrap .header { height: 115px; min-width: 70px; width:1200px; margin: 0 auto; }
                     .h_wrap .header h1 { text-align: left; }
                     .h_wrap .header h1 a { position: relative; }
-                    .h_wrap .header h1 a img { width: 140px; margin-top: 16px; }
-                    .h_wrap .header .menubar .nav_menu { position: absolute; top: 57px; right: 0; width: 100%; max-width: 50%; }
+                    .h_wrap .header h1 a img { width: 150px; margin-top: 18px; }
+                    .h_wrap .header .menubar .nav_menu { text-align: right; }
+                    .h_wrap .header .menubar .nav_menu a
+                    { color: #000; transition: color 0.3s ease; margin-right: 30px; }
+                    .h_wrap .header .menubar .nav_menu a:hover { color: orange; }
+                    /* .h_wrap .header .menubar .nav_menu { position: absolute; top: 57px; right: 0;}
                     .h_wrap .header .menubar .nav_menu li { float: left; margin-left: 50px; }
-                    .h_wrap .header .menubar .nav_menu::after { content: ' '; display: block; overflow: hidden; clear: both; }
+                    .h_wrap .header .menubar .nav_menu::after { content: ' '; display: block; overflow: hidden; clear: both; } */
                     .h_wrap .header .menubar:last-child a { display: none; }
                     .menu_icon  { display: none; }
-                    .active1 {display: block;}
+                    .active {display: block;}
 
 
-                    /* @media (max-width: 1120px) {
-                        .h_wrap .header h1 { width: 90%; max-width: 1200px; margin: 0 auto; }
-                        .h_wrap .header .menubar .nav_menu { max-width: 54%; }
-                    } */
+
+                    @media (max-width: 1200px) {
+                        .h_wrap .header { width: 100%; }
+                        /* .h_wrap .header h1 { width: 90%; max-width: 1200px; margin: 0 auto; }
+                        .h_wrap .header .menubar .nav_menu { max-width: 54%; } */
+                    }
                     @media ( max-width: 768px) {
                         .M_navWrap { display: block; }
                         .menu_icon  { display: block; position: absolute; right: 30px; top: 36px; font-size: 30px;}
@@ -99,7 +107,7 @@
                              display: block;
 
                         }
-                        .h_wrap .header .menubar .nav_menu li.active { float: none; display: block; }
+                        .h_wrap .header .menubar .nav_menu li.active {  display: block; }
                         .h_wrap .header h1 { text-align: center; }
 
                     }
