--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
             </section>
         
-            <section class="P_Area m_bottom m_bottom dw_1200px">
+            <section class="P_Area m_bottom dw_1200px">
                 
                 <h2>Product</h2>
                 <div class="P_wrap">
